LIFE-2746: Fixed pressed style on iOS

--- a/src/components/mdl/layout/_layout.scss
+++ b/src/components/mdl/layout/_layout.scss
@@ -1,3 +1,7 @@
+* { 
+	-webkit-tap-highlight-color: transparent; 
+}
+
 .mdl-layout__drawer-button {
   color: unquote("rgb(#{$color-primary})");
 }
